fixed align navbar

--- a/css/pages.css
+++ b/css/pages.css
@@ -54,6 +54,7 @@ nav{
 }
 .nav-link{
     color: rgba(255,255,255,0.8) !important;
+    text-align: center;
 }
 .navbar-dark .navbar-toggler{
     border: none;
